--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
 <html>
   <head>
     <title>p5.js + Supabase Example</title>
-    <script src="https://cdn.jsdelivr.net/npm/p5/lib/p5.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js/dist/supabase.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.7.0/p5.min.js"></script>
+  <!-- Load Supabase JS -->
+  <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
