--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
-    <h1>p5.js + Supabase Demo</h1>
-    <div id="scoreboard"></div>
-    <script src="js/sketch.js"></script>
+      <h1>Supabase + p5.js + GitHub Pages</h1>
+  <p id="db-output">Loading data...</p>
+
+  <script src="js/sketch.js"></script>
   </body>
 </html>
