--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
   </head>
   <body>
       <h1>Supabase + p5.js + GitHub Pages</h1>
-      <p id="db-output">Loading data...</p>
+        <!-- Canvas will be created by p5.js -->
+  <div id="canvas-container"></div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.7.0/p5.min.js"></script>
   <!-- Load Supabase JS -->
   <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
